# EVE-Bot-FrontEnd

./: .gitignore  .prettierrc.yaml  Cargo.toml  ManualImage  run-rust-server.bat
evebot-gocq-wrapper/: Cargo.toml
evebot-gocq-wrapper/https/: test_main.http
evebot-gocq-wrapper/src/: error.rs  main.rs  metadata.rs
evebot-gocq-wrapper/src/command/: mod.rs  syntax.rs  traits.rs
evebot-gocq-wrapper/src/command/distributor/: blp.rs  dis.rs  distributor.json  market.rs  mod.rs  skills.rs  type_item.rs
evebot-gocq-wrapper/src/constant/eve/: server.rs
evebot-gocq-wrapper/src/server/: data.rs  handler.rs  mod.rs  parser.rs
evebot-gocq-wrapper/src/utils/: fetch.rs  json_wrapper.rs  mod.rs  numeric.rs  pattern_match.rs
evebot-gocq-wrapper/syntax/command/: blp_mat.json  blp_mat_price.json  market_jita.json  skill_item.json  type_fetch_id.json  type_fetch_name.json
evebot-gocq-wrapper/syntax/mixin/: blueprint.json  market_server.json  search_pattern.json
evebot-proc-macro/: Cargo.toml  SYNTAX.md
evebot-proc-macro/src/: distributor.rs  lib.rs  syntax_macro.rs
workspace/: help_text.py  help_text.yaml
