[package]
name = "evebot"
version = "0.1.0"
edition = "2021"
resolver = "2"
include = [
    "src/**/*",
    "syntax/**/*",
    "Cargo.lock",
    "Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
itoa = "1.0.9"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
evebot-proc-macro = { path = "../evebot-proc-macro" }
futures-util = "0.3.29"
uuid = { version = "1.5", features = ["v4", "fast-rng"]}
itertools = "0.12.0"

[dev-dependencies]
tokio = "1"
