[package]
name = "evebot-proc-macro"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
itertools = "0.12"
